docs(roadmap): add Phase 16 - Migration Metrics Emission to v0.7.0
- Closes VAL-03 tech debt from v0.6.0 audit
- Wire PostMigrationCompleted in ControllerUnpublishVolume
- Populate migrations_total and migration_duration_seconds metrics
- Enable Prometheus observability for KubeVirt migrations
- 3 planned tasks: wiring, detection logic, testing

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -201,9 +201,9 @@ Plans:
 
 </details>
 
-### v0.7.0 State Management Refactoring (Planned)
+### v0.7.0 State Management Refactoring and Observability (Planned)
 
-**Milestone Goal:** Use Kubernetes VolumeAttachment objects as source of truth for attachment state
+**Milestone Goal:** Use Kubernetes VolumeAttachment objects as source of truth for attachment state and complete migration metrics observability
 
 #### Phase 15: VolumeAttachment-Based State Rebuild
 **Goal**: Controller rebuilds attachment state from VolumeAttachment objects instead of PV annotations
@@ -223,15 +223,36 @@ Plans:
 **Plans**: 4 plans
 
 Plans:
-- [ ] 15-01-PLAN.md - VolumeAttachment listing helpers and filtering
-- [ ] 15-02-PLAN.md - Rebuild state from VolumeAttachments on startup
-- [ ] 15-03-PLAN.md - PV annotations informational-only documentation
-- [ ] 15-04-PLAN.md - Comprehensive testing for restart scenarios
+- [x] 15-01-PLAN.md - VolumeAttachment listing helpers and filtering
+- [x] 15-02-PLAN.md - Rebuild state from VolumeAttachments on startup
+- [x] 15-03-PLAN.md - PV annotations informational-only documentation
+- [x] 15-04-PLAN.md - Comprehensive testing for restart scenarios
+
+#### Phase 16: Migration Metrics Emission
+**Goal**: Populate migration metrics to enable observability of KubeVirt live migrations
+**Depends on**: Phase 15
+**Requirements**: VAL-03 (from v0.6.0 audit - tech debt closure)
+**Success Criteria** (what must be TRUE):
+  1. **PostMigrationCompleted called** - ControllerUnpublishVolume detects migration completion and calls migrationTracker.PostMigrationCompleted
+  2. **migrations_total increments** - Counter increases when migrations complete successfully
+  3. **migration_duration_seconds recorded** - Histogram captures time between MigrationStartedAt and completion
+  4. **Metrics queryable in Prometheus** - Operators can query migration count and duration via /metrics endpoint
+**Rationale**:
+  - Phase 10 created metrics framework but PostMigrationCompleted was never wired
+  - v0.6.0 hardware validation showed functional migration works but metrics not emitted
+  - Non-blocking for v0.6.0 but valuable for production observability
+  - Closes tech debt identified in v0.6.0 milestone audit
+**Plans**: TBD
+
+Plans:
+- [ ] 16-01-PLAN.md - Wire PostMigrationCompleted in ControllerUnpublishVolume
+- [ ] 16-02-PLAN.md - Add migration detection logic and metric population
+- [ ] 16-03-PLAN.md - Testing with simulated and real KubeVirt migrations
 
 ## Progress
 
 **Execution Order:**
-Phases execute in numeric order: 11 -> 12 -> 13 -> 14 -> 15 (planned)
+Phases execute in numeric order: 11 -> 12 -> 13 -> 14 -> 15 -> 16
 
 | Phase | Milestone | Plans Complete | Status | Completed |
 |-------|-----------|----------------|--------|-----------|
@@ -249,4 +270,5 @@ Phases execute in numeric order: 11 -> 12 -> 13 -> 14 -> 15 (planned)
 | 12. Compatibility and Quality | v0.6.0 | 1/1 | Complete | 2026-02-03 |
 | 13. Hardware Validation | v0.6.0 | 1/1 | Complete | 2026-02-04 |
 | 14. Error Resilience | v0.6.0 | 4/4 | Complete | 2026-02-03 |
-| 15. VolumeAttachment-Based State | v0.7.0 | 0/4 | Planned | - |
+| 15. VolumeAttachment-Based State | v0.7.0 | 4/4 | Complete | 2026-02-04 |
+| 16. Migration Metrics Emission | v0.7.0 | 0/3 | Planned | - |
