--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -5,8 +5,8 @@
 - v1 Production Stability - Phases 1-4 (shipped 2026-01-31)
 - v0.3.0 Volume Fencing - Phases 5-7 (shipped 2026-02-03)
 - v0.5.0 KubeVirt Live Migration - Phases 8-10 (shipped 2026-02-03)
-- v0.6.0 Block Volume Support - Phases 11-14 (complete 2026-02-04)
-- v0.7.0 State Management Refactoring - Phase 15 (planned)
+- v0.6.0 Block Volume Support - Phases 11-14 (shipped 2026-02-04)
+- v0.7.0 State Management Refactoring and Observability - Phases 15-16 (planned)
 
 ## Phases
 
@@ -130,74 +130,11 @@ Plans:
 </details>
 
 <details>
-<summary>v0.6.0 Block Volume Support (Phases 11-14) - COMPLETE 2026-02-04</summary>
+<summary>✅ v0.6.0 Block Volume Support (Phases 11-14) - SHIPPED 2026-02-04</summary>
 
-**Milestone Goal:** Implement CSI block volume support to enable KubeVirt VMs with RDS storage
+Block volume support for KubeVirt VMs, live migration validated on metal cluster, mount storm prevention, and comprehensive error resilience.
 
-#### Phase 11: Block Volume Node Operations
-**Goal**: Node plugin handles block volumes without formatting filesystem
-**Depends on**: Phase 10 (RWX capability exists)
-**Requirements**: BLOCK-01, BLOCK-02, BLOCK-03, BLOCK-04, BLOCK-05
-**Success Criteria** (what must be TRUE):
-  1. NodeStageVolume connects to NVMe target for block volumes without creating filesystem
-  2. NodePublishVolume creates block device file at target path (e.g., /var/lib/kubelet/pods/XXX/volumeDevices/pvc-YYY)
-  3. Block device file is accessible by VM workload with correct major/minor numbers
-  4. NodeUnpublishVolume successfully removes block device file
-  5. NodeUnstageVolume disconnects NVMe target for block volumes correctly
-**Plans**: 3 plans
-
-Plans:
-- [x] 11-01-PLAN.md - MakeFile helper and NodeStageVolume block support
-- [x] 11-02-PLAN.md - NodePublishVolume and NodeUnpublishVolume block support
-- [x] 11-03-PLAN.md - NodeUnstageVolume block support and unit tests
-
-#### Phase 12: Compatibility and Quality
-**Goal**: Existing filesystem volumes work without regression, clear error messages
-**Depends on**: Phase 11
-**Requirements**: BLOCK-06, BLOCK-07
-**Success Criteria** (what must be TRUE):
-  1. Existing filesystem-mode PVCs mount successfully (no regression from block volume changes)
-  2. Driver returns clear error if user requests unsupported volume mode combination
-  3. Unit tests cover both block and filesystem volume paths
-**Plans**: 1 plan
-
-Plans:
-- [x] 12-01-PLAN.md - Regression tests and error message validation
-
-#### Phase 13: Hardware Validation
-**Goal**: KubeVirt VMs boot and live migrate successfully on metal cluster
-**Depends on**: Phase 12
-**Requirements**: VAL-01, VAL-02, VAL-03
-**Success Criteria** (what must be TRUE):
-  1. KubeVirt VM boots successfully with RDS block volume on metal cluster
-  2. VM can read and write data to block volume (I/O validation)
-  3. KubeVirt live migration completes end-to-end (VM moves between nodes)
-  4. Migration metrics (migrations_total, migration_duration_seconds) are emitted correctly
-  5. No data corruption detected after migration (checksum validation)
-**Plans**: 1 plan
-
-Plans:
-- [x] 13-01-PLAN.md - Hardware validation on metal cluster
-
-#### Phase 14: Error Resilience and Mount Storm Prevention
-**Goal**: Prevent corrupted filesystems from causing cluster-wide mount storms and system volume interference
-**Depends on**: Phase 13
-**Requirements**: PROTECT-01, PROTECT-02, RESILIENCE-01, RESILIENCE-02, RESILIENCE-03, RESILIENCE-04
-**Success Criteria** (what must be TRUE):
-  1. **NQN filtering prevents system volume disconnect** - Driver only manages volumes with configurable NQN prefix (default: `pvc-`), refuses to disconnect system volumes (e.g., `nixos-*`)
-  2. **Configurable NQN prefix** - Managed NQN prefix is configurable via Helm value `nqnPrefix` and env var `CSI_MANAGED_NQN_PREFIX`, defaults to `nqn.2000-02.com.mikrotik:pvc-`
-  3. Procmounts parsing has timeout protection (max 10s)
-  4. Duplicate mount detection prevents mount storms (max 100 entries per device)
-  5. Graceful shutdown completes within 30s even during stuck operations
-  6. Filesystem health check runs before NodeStageVolume mount
-  7. Circuit breaker prevents retry storms on repeatedly failing volumes
-**Plans**: 4 plans
-
-Plans:
-- [x] 14-01-PLAN.md - NQN prefix validation and configurable filtering
-- [x] 14-02-PLAN.md - Safe procmounts parsing with timeout and duplicate detection
-- [x] 14-03-PLAN.md - Circuit breaker and filesystem health checks
-- [x] 14-04-PLAN.md - Graceful shutdown and deployment configuration
+**Full details:** [.planning/milestones/v0.6.0-ROADMAP.md](milestones/v0.6.0-ROADMAP.md)
 
 </details>
 
