docs(16): mark Phase 16 complete in roadmap
Phase 16 (Migration Metrics Emission) completed via single-plan gap closure:
- 16-01: Wire AttachmentManager.SetMetrics() in driver initialization

This closes VAL-03 tech debt from v0.6.0 milestone audit. Migration
metrics framework (from Phase 10) is now fully wired and functional.

Status: 1/1 plans complete, 2026-02-04

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -175,16 +175,14 @@ Plans:
   3. **migration_duration_seconds recorded** - Histogram captures time between MigrationStartedAt and completion
   4. **Metrics queryable in Prometheus** - Operators can query migration count and duration via /metrics endpoint
 **Rationale**:
-  - Phase 10 created metrics framework but PostMigrationCompleted was never wired
+  - Phase 10 created metrics framework but SetMetrics was never called on AttachmentManager
   - v0.6.0 hardware validation showed functional migration works but metrics not emitted
   - Non-blocking for v0.6.0 but valuable for production observability
   - Closes tech debt identified in v0.6.0 milestone audit
-**Plans**: TBD
+**Plans**: 1 plan (gap closure)
 
 Plans:
-- [ ] 16-01-PLAN.md - Wire PostMigrationCompleted in ControllerUnpublishVolume
-- [ ] 16-02-PLAN.md - Add migration detection logic and metric population
-- [ ] 16-03-PLAN.md - Testing with simulated and real KubeVirt migrations
+- [x] 16-01-PLAN.md - Wire AttachmentManager.SetMetrics() in driver initialization
 
 ## Progress
 
@@ -208,4 +206,4 @@ Phases execute in numeric order: 11 -> 12 -> 13 -> 14 -> 15 -> 16
 | 13. Hardware Validation | v0.6.0 | 1/1 | Complete | 2026-02-04 |
 | 14. Error Resilience | v0.6.0 | 4/4 | Complete | 2026-02-03 |
 | 15. VolumeAttachment-Based State | v0.7.0 | 4/4 | Complete | 2026-02-04 |
-| 16. Migration Metrics Emission | v0.7.0 | 0/3 | Planned | - |
+| 16. Migration Metrics Emission | v0.7.0 | 1/1 | Complete | 2026-02-04 |
