--- a/.planning/phases/17-test-infrastructure-fix/17-01-PLAN.md
+++ b/.planning/phases/17-test-infrastructure-fix/17-01-PLAN.md
@@ -53,82 +53,134 @@ Output: All tests in pkg/driver pass without panics or failures
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Fix TestNodeStageVolume_BlockVolume test expectations</name>
+  <name>Task 1: Verify implementation behavior and fix TestNodeStageVolume_BlockVolume</name>
   <files>pkg/driver/node_test.go</files>
   <action>
-The test at line 675-757 expects NodeStageVolume for block volumes to:
-- Create staging directory
-- Write device path to staging/device metadata file
+First, verify the actual implementation behavior by reading node.go:
 
-However, the implementation (node.go lines 240-248) follows AWS EBS CSI driver pattern:
-- Block volumes do NOT create staging directory
-- Device is found by NQN at NodePublishVolume time
-- This is per CSI spec - NodeStageVolume just ensures device is ready
+**Implementation reality (node.go lines 240-248):**
+```go
+if isBlockVolume {
+    // Block volume: device is connected above via nvme-tcp
+    // Per CSI spec and AWS EBS CSI driver pattern, NodeStageVolume for block volumes
+    // does NOT create anything at staging_target_path - it just ensures device is ready
+    // NodePublishVolume will find the device by NQN and bind mount to target path
+    klog.V(2).Infof("Successfully staged block volume %s (device: %s, NQN: %s)",
+        volumeID, devicePath, nqn)
+    secLogger.LogVolumeStage(volumeID, ns.nodeID, nqn, nvmeAddress, security.OutcomeSuccess, nil, time.Since(startTime))
+    return &csi.NodeStageVolumeResponse{}, nil
+}
+```
 
-Fix the test by:
-1. Remove assertions for staging directory creation (lines 740-743)
-2. Remove assertions for device metadata file (lines 745-757)
-3. Keep assertions that verify:
-   - NVMe connect was called
-   - Format was NOT called for block volumes
-   - Mount was NOT called for block volumes
-4. Add assertion verifying NodeStageVolumeResponse is returned successfully
+The implementation DOES NOT create staging directory or metadata file. It returns immediately after NVMe connect.
 
-The test should validate actual implementation behavior, not hypothetical staging patterns.
+**Test expectations (node_test.go lines 740-757) are WRONG:**
+- Line 740-743: Asserts staging directory exists (but implementation doesn't create it)
+- Line 745-757: Asserts device metadata file exists (but implementation doesn't write it)
+
+**Fix the test by removing incorrect assertions:**
+1. DELETE lines 740-757 (staging directory and metadata file assertions)
+2. KEEP lines 725-738 (correct assertions):
+   - NVMe connect was called (line 726-728)
+   - Format was NOT called (line 730-732)
+   - Mount was NOT called (line 735-737)
+3. The test passes because NodeStageVolume returns successfully (line 720-723 checks for error)
+
+Add a documenting comment at the test explaining why no staging artifacts are expected:
+```go
+// TestNodeStageVolume_BlockVolume tests staging a block volume.
+// Per CSI spec and AWS EBS CSI driver pattern, NodeStageVolume for block volumes
+// only connects to the NVMe device - no staging directory or metadata is created.
+// NodePublishVolume finds the device by NQN via nvmeConn.GetDevicePath().
+```
   </action>
   <verify>
 Run: `go test -v ./pkg/driver/... -run TestNodeStageVolume_BlockVolume`
 Expected: Test passes without errors
   </verify>
-  <done>TestNodeStageVolume_BlockVolume passes, validating that block volumes connect but don't format/mount</done>
+  <done>TestNodeStageVolume_BlockVolume passes, testing connect-only behavior without staging artifact assertions</done>
 </task>
 
 <task type="auto">
-  <name>Task 2: Fix TestNodePublishVolume_BlockVolume nil pointer dereference</name>
+  <name>Task 2: Fix TestNodePublishVolume_BlockVolume - add nvmeConn mock and remove unused staging setup</name>
   <files>pkg/driver/node_test.go</files>
   <action>
-The test at line 827-890 creates NodeServer without nvmeConn field (lines 864-868):
+The test at lines 827-890 has two issues:
+
+**Issue 1: Missing nvmeConn mock causes nil pointer panic**
+
+NodePublishVolume for block volumes calls `ns.nvmeConn.GetDevicePath(nqn)` at node.go:533.
+The test (lines 864-868) creates NodeServer without nvmeConn:
 ```go
 ns := &NodeServer{
     driver:  driver,
     mounter: mounter,
     nodeID:  "test-node",
-    // nvmeConn is MISSING - causes panic at node.go:533
+    // nvmeConn is MISSING - causes panic
 }
 ```
 
-NodePublishVolume for block volumes calls `ns.nvmeConn.GetDevicePath(nqn)` at line 533, causing nil pointer panic.
+**Issue 2: Staging directory setup is unnecessary and misleading**
 
-Fix by:
-1. Add mockNVMEConnector to test setup (use existing mock pattern from TestNodeStageVolume_FilesystemVolume_Unchanged at lines 770-788)
-2. Configure mock to return the mock device path created in test setup
-3. Add nvmeConn field to NodeServer initialization
+Lines 844-853 create staging directory with device metadata file:
+```go
+if err := os.MkdirAll(stagingPath, 0750); err != nil { ... }
+metadataPath := filepath.Join(stagingPath, "device")
+if err := os.WriteFile(metadataPath, []byte(mockDevicePath+"\n"), 0600); err != nil { ... }
+```
 
-Implementation pattern (from line 770-788):
+But the implementation (node.go:533) finds the device by calling `nvmeConn.GetDevicePath(nqn)`, NOT by reading a metadata file. This staging setup tests an old/wrong pattern.
+
+**Fix:**
+1. ADD mockNVMEConnector setup returning the mock device path:
 ```go
 connector := &mockNVMEConnector{
-    devicePath: mockDevicePath,  // Use the temp file created in test
+    devicePath: mockDevicePath,
 }
+```
 
+2. ADD nvmeConn to NodeServer initialization:
+```go
 ns := &NodeServer{
     driver:   driver,
     mounter:  mounter,
-    nvmeConn: connector,  // ADD THIS
+    nvmeConn: connector,
     nodeID:   "test-node",
 }
 ```
 
-Note: The test already creates staging directory and metadata file, which is correct since TestNodePublishVolume tests the publish step (which reads metadata from staging). The only issue is the missing nvmeConn mock.
+3. REMOVE the staging directory and metadata file setup (lines 844-853) since they're not used by the implementation. Keep mockDevicePath creation (lines 838-842) since it's used to verify the mock device exists.
+
+4. ADD VolumeContext with nqn to the request (implementation uses nqn to find device):
+```go
+req := &csi.NodePublishVolumeRequest{
+    VolumeId:          "pvc-12345678-1234-1234-1234-123456789012",
+    StagingTargetPath: stagingPath,
+    TargetPath:        targetPath,
+    VolumeCapability:  createBlockVolumeCapability(),
+    VolumeContext: map[string]string{
+        "nqn": "nqn.2000-02.com.mikrotik:pvc-12345678-1234-1234-1234-123456789012",
+    },
+    Readonly: false,
+}
+```
+
+5. ADD documenting comment:
+```go
+// TestNodePublishVolume_BlockVolume tests publishing a block volume.
+// Block volume publish finds device by NQN via nvmeConn.GetDevicePath(),
+// then creates a device node at target path using mknod (not bind mount).
+```
   </action>
   <verify>
 Run: `go test -v ./pkg/driver/... -run TestNodePublishVolume_BlockVolume`
 Expected: Test passes without nil pointer dereference
   </verify>
-  <done>TestNodePublishVolume_BlockVolume passes, validating block volume publish creates mknod device node</done>
+  <done>TestNodePublishVolume_BlockVolume passes, correctly using nvmeConn to find device by NQN</done>
 </task>
 
 <task type="auto">
-  <name>Task 3: Verify all driver tests pass and document root cause</name>
+  <name>Task 3: Verify all driver tests pass</name>
   <files>pkg/driver/node_test.go</files>
   <action>
 1. Run full driver test suite:
@@ -136,26 +188,21 @@ Expected: Test passes without nil pointer dereference
    go test -v -race ./pkg/driver/...
    ```
 
-2. If any other tests fail, investigate and fix following the same patterns:
-   - Check for missing mock initialization
-   - Check for test expectations misaligned with implementation
+2. If TestNodePublishVolume_BlockVolume_MissingMetadata test fails:
+   - This test at lines 892-940 expects an error when metadata file is missing
+   - Since implementation uses nvmeConn.GetDevicePath() not metadata files, update:
+     - Remove metadata-based error expectation
+     - Test should expect error from nvmeConn.GetDevicePath() failing
+     - Configure mock to return an error for this case:
+     ```go
+     connector := &mockNVMEConnector{
+         err: fmt.Errorf("device not found for NQN"),
+     }
+     ```
 
-3. Add a brief comment at the top of TestNodeStageVolume_BlockVolume documenting the CSI pattern:
-   ```go
-   // TestNodeStageVolume_BlockVolume tests staging a block volume.
-   // Per CSI spec and AWS EBS CSI driver pattern, NodeStageVolume for block volumes
-   // only connects to the NVMe device - no staging directory or metadata is created.
-   // NodePublishVolume finds the device by NQN and creates a device node at target path.
-   ```
+3. Check for any other tests that may rely on the old metadata file pattern and update accordingly.
 
-4. Add comment at TestNodePublishVolume_BlockVolume:
-   ```go
-   // TestNodePublishVolume_BlockVolume tests publishing a block volume.
-   // Block volume publish finds device by NQN via nvmeConn.GetDevicePath(),
-   // then creates a device node at target path using mknod (not bind mount).
-   ```
-
-These comments prevent future confusion about expected test behavior vs filesystem volume behavior.
+4. Run `make test` to verify full test suite passes.
   </action>
   <verify>
 Run: `go test -v -race ./pkg/driver/...`
@@ -163,7 +210,7 @@ Expected: All tests pass (PASS with 0 failures)
 Run: `make test`
 Expected: All unit tests pass
   </verify>
-  <done>All driver tests pass, root cause documented in test comments, test infrastructure ready for new tests</done>
+  <done>All driver tests pass, test infrastructure ready for new tests</done>
 </task>
 
 </tasks>
@@ -185,8 +232,8 @@ go test -v ./pkg/driver/... 2>&1 | grep -c "^=== RUN"
 <success_criteria>
 1. `go test -v -race ./pkg/driver/...` passes with 0 failures
 2. No nil pointer dereferences in test output
-3. TestNodeStageVolume_BlockVolume validates connect-only behavior
-4. TestNodePublishVolume_BlockVolume validates mknod device creation
+3. TestNodeStageVolume_BlockVolume validates connect-only behavior (no staging artifact assertions)
+4. TestNodePublishVolume_BlockVolume uses nvmeConn.GetDevicePath() pattern
 5. Test comments document expected behavior patterns
 6. `make test` passes (all unit tests)
 </success_criteria>
