fix(18): revise plans based on checker feedback
Addresses 4 blockers and 3 warnings:

18-01 (security logger consolidation):
- Fixed requirement alignment: clarified 11 methods (~300 lines) -> <50 lines
- File target remains <200 lines total
- Added backward compatibility verification for existing callers
- Made must_haves.truths numeric instead of subjective

18-02 (verbosity rationalization):
- Added duplicate logging detection between pkg/rds and pkg/driver
- Added verification step to check for V(2) duplicates across layers
- Rule: one layer owns each outcome log

18-03 (mount package) - SPLIT from original:
- Now covers only mount package (5 files) + pkg/mount/doc.go
- Removed node.go, reconcilers from scope

18-04 (node + reconcilers) - NEW:
- Contains node.go, reconcilers, doc.go files (4 files)
- Both 03 and 04 in wave 2, depend on 18-02
- Split addresses "scope too large" blocker

Wave structure: 1 (01, 02 parallel) -> 2 (03, 04 parallel)

--- a/.planning/phases/18-logging-cleanup/18-01-PLAN.md
+++ b/.planning/phases/18-logging-cleanup/18-01-PLAN.md
@@ -11,8 +11,9 @@ autonomous: true
 
 must_haves:
   truths:
-    - "Security logger provides same audit functionality with significantly less code"
-    - "All 11 operation-specific Log* methods replaced with table-driven helper"
+    - "11 operation-specific Log* methods reduced from ~300 lines to <50 lines total"
+    - "Security logger file reduced from 540 lines to <200 lines total"
+    - "Existing callers in pkg/driver and pkg/reconciler compile and work unchanged"
     - "Tests verify all outcome types (success, failure, request) produce correct events"
   artifacts:
     - path: "pkg/security/logger.go"
@@ -26,17 +27,22 @@ must_haves:
       to: "LogOperation helper"
       via: "table-driven config"
       pattern: "OperationLogConfig|LogOperation"
+    - from: "pkg/driver/controller.go"
+      to: "pkg/security/logger.go"
+      via: "unchanged Log* method calls"
+      pattern: "securityLogger\\.Log"
 ---
 
 <objective>
 Consolidate security logger from 540 lines to <200 lines using table-driven helper
 
-Purpose: Eliminate repetitive switch/case patterns across 11 operation-specific methods (LogVolumeCreate, LogVolumeDelete, LogVolumeStage, etc.) by extracting a single configurable LogOperation helper with table-driven outcome mapping.
+Purpose: Eliminate repetitive switch/case patterns across 11 operation-specific methods (LogVolumeCreate, LogVolumeDelete, LogVolumeStage, etc.) by extracting a single configurable LogOperation helper with table-driven outcome mapping. The 11 methods currently occupy ~300 lines (lines 221-525); these should become <50 lines of wrapper code calling a shared helper.
 
 Output:
-- pkg/security/logger.go reduced by ~70% (540 -> ~150 lines)
+- pkg/security/logger.go reduced by ~65% (540 -> ~150-180 lines)
 - Single LogOperation() helper with OperationLogConfig table
-- Existing tests updated to use new helper
+- 11 operation methods become thin wrappers (~4-5 lines each)
+- Backward compatibility maintained for all existing callers
 </objective>
 
 <execution_context>
@@ -125,14 +131,18 @@ Keep SSH-specific methods (LogSSHConnectionAttempt, etc.) as-is since they have 
 Keep LogSecurityViolation and LogValidationFailure as-is since they're special cases.
   </action>
   <verify>
-Run `go build ./...` to verify compilation.
-Run `make test` to verify existing tests still pass.
-Count lines: `wc -l pkg/security/logger.go` should be <200 lines.
+1. Run `go build ./...` to verify compilation
+2. Run `make test` to verify existing tests still pass
+3. Count lines: `wc -l pkg/security/logger.go` should be <200 lines
+4. Verify backward compatibility - existing callers unchanged:
+   - `grep -n 'securityLogger\.Log' pkg/driver/controller.go pkg/driver/node.go pkg/reconciler/*.go` should show same call patterns
+   - All existing calls should compile without modification
   </verify>
   <done>
-Security logger reduced from 540 to <200 lines.
+Security logger reduced from 540 to <200 lines total.
+11 operation methods now occupy <50 lines total (thin wrappers).
 All operation methods use LogOperation helper internally.
-Backward compatibility maintained (existing callers unchanged).
+Backward compatibility maintained - existing callers in pkg/driver and pkg/reconciler work unchanged.
   </done>
 </task>
 
@@ -178,14 +188,17 @@ Tests verify EventField functional options apply correctly.
 <verification>
 1. `make test` passes (existing functionality preserved)
 2. `wc -l pkg/security/logger.go` shows <200 lines (down from 540)
-3. `grep -c 'switch outcome' pkg/security/logger.go` shows 0 or 1 (consolidated)
-4. All CSI operations that use security logger still work (no behavioral changes)
+3. Wrapper methods (lines 221-525) reduced from ~300 lines to <50 lines
+4. `grep -c 'switch outcome' pkg/security/logger.go` shows 0 or 1 (consolidated)
+5. Existing callers compile without changes: `go build ./pkg/driver/... ./pkg/reconciler/...`
 </verification>
 
 <success_criteria>
-- Security logger consolidated from 540 lines to <200 lines
+- Security logger file consolidated from 540 lines to <200 lines
+- 11 operation-specific methods reduced from ~300 lines to <50 lines
 - Table-driven LogOperation helper handles all volume operation outcomes
 - Backward compatibility maintained (existing Log* method signatures unchanged)
+- Existing callers in pkg/driver and pkg/reconciler work without modification
 - Tests cover new helper and existing functionality
 </success_criteria>
 
