--- a/.planning/phases/18-logging-cleanup/18-02-PLAN.md
+++ b/.planning/phases/18-logging-cleanup/18-02-PLAN.md
@@ -12,6 +12,7 @@ autonomous: true
 must_haves:
   truths:
     - "DeleteVolume produces maximum 2 log statements at V(2) level per operation"
+    - "No duplicate outcome logging between pkg/rds and pkg/driver at V(2) level"
     - "Intermediate step logs moved from V(3) to V(4)"
     - "Production logs show outcomes only, not command details"
   artifacts:
@@ -31,12 +32,13 @@ must_haves:
 <objective>
 Rationalize verbosity levels in pkg/rds and pkg/driver/controller
 
-Purpose: Reduce DeleteVolume from 6 log statements to maximum 2 at V(2). Move intermediate step logging from V(3) to V(4) (debug level). Production logs should show outcomes only, not command execution details.
+Purpose: Reduce DeleteVolume from 6 log statements to maximum 2 at V(2). Move intermediate step logging from V(3) to V(4) (debug level). Production logs should show outcomes only, not command execution details. Critically, ensure no duplicate outcome logging occurs between the rds package and controller package at V(2).
 
 Output:
 - DeleteVolume: 1-2 V(2) logs (outcome only)
 - CreateVolume/ResizeVolume: same pattern
 - Intermediate steps moved to V(4)
+- No duplicate outcome logs between layers
 </objective>
 
 <execution_context>
@@ -110,9 +112,12 @@ Target:
 - These already use V(4) - keep as-is
   </action>
   <verify>
-Run `go build ./...` to verify compilation.
-Count V(2) in commands.go: `grep -c 'klog.V(2)' pkg/rds/commands.go` should be ~4 (down from 7).
-Count V(3) in commands.go: `grep -c 'klog.V(3)' pkg/rds/commands.go` should be 0.
+1. Run `go build ./...` to verify compilation
+2. Count V(2) in commands.go: `grep -c 'klog.V(2)' pkg/rds/commands.go` should be ~4 (down from 7)
+3. Count V(3) in commands.go: `grep -c 'klog.V(3)' pkg/rds/commands.go` should be 0
+4. Behavioral verification - simulate DeleteVolume and check log output:
+   - At V=2: Should see only "Deleted volume X" (1 line)
+   - At V=4: Should see intermediate steps as well
   </verify>
   <done>
 CreateVolume: 1 V(2) log (outcome only)
@@ -123,16 +128,22 @@ All intermediate steps at V(4) for debugging
 </task>
 
 <task type="auto">
-  <name>Task 2: Rationalize pkg/driver/controller.go verbosity</name>
+  <name>Task 2: Rationalize pkg/driver/controller.go verbosity and eliminate duplicate logging</name>
   <files>pkg/driver/controller.go</files>
   <action>
-Apply same verbosity rationalization to controller CSI methods:
+Apply same verbosity rationalization to controller CSI methods. Critical: Ensure no duplicate outcome logging between controller and rds layers.
+
+**Duplicate logging detection:**
+Before making changes, identify where both layers log the same outcome:
+- If rds.CreateVolume logs "Created volume X" at V(2) AND controller logs "Volume created" at V(2), this is duplicate
+- Rule: rds package owns the outcome log, controller logs CSI-level context at V(4)
 
 **CreateVolume:**
 Current pattern has multiple V(2) logs for request details and outcomes.
 Target:
 - Single V(2) for outcome: "CreateVolume completed for %s" or "Volume %s already exists"
 - Move request details (parameters, paths) to V(4)
+- If rds.CreateVolume already logs outcome at V(2), controller should NOT also log outcome at V(2)
 
 **DeleteVolume:**
 Current (lines ~247, ~252):
@@ -143,24 +154,30 @@ klog.V(3).Infof("Deleting volume %s (path=%s, size=%d bytes, ...)", ...)
 Target:
 - Keep "not found" at V(4) (diagnostic)
 - Remove "Deleting volume" (RDS layer logs the outcome)
-- Single V(2) at end: "DeleteVolume completed for %s"
+- If rds.DeleteVolume logs "Deleted volume X" at V(2), controller should NOT log "Volume deleted" at V(2)
+- Controller can log at V(4): "DeleteVolume CSI call completed for %s"
 
 **ControllerPublishVolume / ControllerUnpublishVolume:**
 Audit V(2)/V(3) usage, ensure:
 - V(2) for outcomes only (published, unpublished, conflict)
 - V(4) for intermediate steps (checking attachments, etc.)
 
-**General rule:** If the rds package already logs the outcome, controller should not double-log at V(2). Move controller logs to V(4) to show the CSI operation flow without duplicating.
+**General rule:** If the rds package already logs the outcome at V(2), controller should log at V(4) to show the CSI operation flow without duplicating. One layer owns the outcome log.
   </action>
   <verify>
-Run `go build ./...` to verify compilation.
-Run `make test` to verify tests pass.
-Grep for duplicated outcome logs: `grep -n 'klog.V(2)' pkg/driver/controller.go | head -20`
+1. Run `go build ./...` to verify compilation
+2. Run `make test` to verify tests pass
+3. Check for duplicate outcome logging at V(2):
+   - `grep -n 'klog.V(2).*[Cc]reate' pkg/rds/commands.go pkg/driver/controller.go`
+   - `grep -n 'klog.V(2).*[Dd]elete' pkg/rds/commands.go pkg/driver/controller.go`
+   - Verify no duplicate outcome messages for same operation
+4. Grep for remaining V(2) in controller: `grep -n 'klog.V(2)' pkg/driver/controller.go | head -20`
   </verify>
   <done>
 Controller logs reduced - no duplicate outcome logging with rds package.
-V(2) shows CSI operation outcomes only.
+V(2) shows CSI operation outcomes only (one layer owns each outcome).
 V(4) shows intermediate steps and parameter details.
+No operation produces duplicate outcome logs at V(2) across layers.
   </done>
 </task>
 
@@ -170,14 +187,16 @@ V(4) shows intermediate steps and parameter details.
 1. `make test` passes
 2. DeleteVolume operation produces maximum 2 log lines at V(2) (test with V=2)
 3. No V(3) statements remain in pkg/rds/commands.go (all moved to V(4))
-4. Production log output (V=2) is quiet - outcomes only, no command details
+4. No duplicate V(2) outcome logs between pkg/rds and pkg/driver for same operation
+5. Production log output (V=2) is quiet - outcomes only, no command details
 </verification>
 
 <success_criteria>
 - DeleteVolume: maximum 2 V(2) log statements per operation
 - V(3) eliminated in pkg/rds (use V(4) for debug)
-- Controller doesn't duplicate rds package logging
+- Controller doesn't duplicate rds package outcome logging at V(2)
 - Production logs (V=2) contain only actionable outcomes
+- Each operation has exactly one layer that owns its V(2) outcome log
 </success_criteria>
 
 <output>
