fix(19): revise plan 05 based on checker feedback
Address 5 checker issues:
- Fix Task 1 action: wrap errors in runCommandWithRetry() at lines 228-230
  (isRetryableError returns bool, cannot wrap there)
- Add error chain behavior test to Task 1 verification
- Specify exact location for ErrResourceExhausted wrapping with code diff
- Clarify line 174 and 184 replacements in GetVolume
- Make Task 3 test conditional on mock infrastructure existence

--- a/.planning/phases/19-error-handling/19-05-PLAN.md
+++ b/.planning/phases/19-error-handling/19-05-PLAN.md
@@ -31,6 +31,10 @@ must_haves:
       to: "pkg/utils/errors.go"
       via: "import and sentinel usage"
       pattern: "utils\\.ErrVolumeNotFound"
+    - from: "pkg/rds/ssh_client.go"
+      to: "pkg/utils/errors.go"
+      via: "sentinel wrapping in runCommandWithRetry"
+      pattern: "utils\\.ErrResourceExhausted"
     - from: "pkg/driver/controller.go"
       to: "pkg/rds/commands.go"
       via: "errors.Is() check"
@@ -65,33 +69,55 @@ Output: RDS layer returns sentinel errors, driver layer uses errors.Is() for cla
   <files>pkg/rds/commands.go, pkg/rds/ssh_client.go</files>
   <action>
 Update pkg/rds/commands.go:
-1. Add import for "git.srvlab.io/whiskey/rds-csi-driver/pkg/utils"
-2. In GetVolume(), when volume not found, wrap error with sentinel:
-   - Replace `return nil, fmt.Errorf("volume %s not found", slot)` with
-   - `return nil, utils.WrapVolumeError(utils.ErrVolumeNotFound, slot, "")`
-3. In DeleteVolume(), use errors.Is() to check for not found:
-   - Replace `strings.Contains(err.Error(), "not found")` with `errors.Is(err, utils.ErrVolumeNotFound)`
-   - Replace `strings.Contains(err.Error(), "no such item")` - keep as-is since this is RouterOS output, not Go error
+1. Verify import for "git.srvlab.io/whiskey/rds-csi-driver/pkg/utils" exists (it does at line 13)
+2. In GetVolume() at line 174, replace:
+   - BEFORE: `return nil, fmt.Errorf("volume not found: %s", slot)`
+   - AFTER: `return nil, utils.WrapVolumeError(utils.ErrVolumeNotFound, slot, "")`
+3. In GetVolume() at line 184, replace:
+   - BEFORE: `return nil, fmt.Errorf("volume not found: %s", slot)`
+   - AFTER: `return nil, utils.WrapVolumeError(utils.ErrVolumeNotFound, slot, "")`
+4. In DeleteVolume() at line 114, keep the string check for now:
+   - `strings.Contains(err.Error(), "not found")` is checking the error returned from GetVolume
+   - Once GetVolume returns ErrVolumeNotFound, change to: `errors.Is(err, utils.ErrVolumeNotFound)`
+   - Add import "errors" at top of file
+5. Line 129 check for "no such item" - keep as-is (this is RouterOS CLI output, not Go error)
 
 Update pkg/rds/ssh_client.go:
 1. Add import for "git.srvlab.io/whiskey/rds-csi-driver/pkg/utils"
-2. In isNonRetryableError(), when detecting "not enough space":
-   - After detecting the pattern, wrap the error: return `fmt.Errorf("%s: %w", errStr, utils.ErrResourceExhausted)`
-   - Actually, the function returns bool, so instead we need to ensure the CALLER wraps appropriately
-   - Better approach: Add a new function `classifyRDSError(err error) error` that wraps errors with sentinels
-3. In runCommandWithRetry(), after detecting non-retryable error, wrap it with appropriate sentinel:
-   - If "not enough space" detected, wrap with ErrResourceExhausted
-   - Keep original error message for context
+2. In runCommandWithRetry() at lines 228-230, wrap non-retryable errors with sentinel:
+   - BEFORE (lines 227-230):
+     ```go
+     // Check if error is retryable
+     if !isRetryableError(err) {
+         klog.V(4).Infof("Non-retryable error: %v", err)
+         return "", lastErr
+     }
+     ```
+   - AFTER:
+     ```go
+     // Check if error is retryable
+     if !isRetryableError(err) {
+         klog.V(4).Infof("Non-retryable error: %v", err)
+         // Wrap with sentinel if it's a known error type
+         errStr := lastErr.Error()
+         if containsString(errStr, "not enough space") {
+             return "", fmt.Errorf("%w: %s", utils.ErrResourceExhausted, errStr)
+         }
+         return "", lastErr
+     }
+     ```
 
 Key patterns:
-- Use WrapVolumeError for volume-specific errors to include volumeID
-- Use fmt.Errorf with %w to preserve error chain
-- Sentinels at RDS layer, classification at driver layer
+- Use WrapVolumeError for volume-specific errors to include volumeID in context
+- Use fmt.Errorf with %w to preserve error chain (sentinel first for errors.Is to work)
+- Sentinels wrapped at RDS layer, classification via errors.Is() at driver layer
   </action>
   <verify>
 grep -n "utils.ErrVolumeNotFound\|utils.ErrResourceExhausted" pkg/rds/*.go
+grep -n "errors.Is" pkg/rds/commands.go
 go build ./pkg/rds/...
 go test ./pkg/rds/... -v -run TestGetVolume
+go test ./pkg/rds/... -v -run TestSentinel
   </verify>
   <done>
 RDS package returns sentinel-wrapped errors that can be checked with errors.Is()
@@ -103,7 +129,7 @@ RDS package returns sentinel-wrapped errors that can be checked with errors.Is()
   <files>pkg/driver/controller.go</files>
   <action>
 Update pkg/driver/controller.go:
-1. Add import for "errors" (stdlib)
+1. Add import for "errors" (stdlib) if not present
 2. In CreateVolume() (around line 196), replace string matching:
    - Before: `if containsString(err.Error(), "not enough space")`
    - After: `if errors.Is(err, utils.ErrResourceExhausted)`
@@ -125,27 +151,49 @@ Driver uses errors.Is() for type-safe error classification instead of string mat
 </task>
 
 <task type="auto">
-  <name>Task 3: Add tests for sentinel error integration</name>
+  <name>Task 3: Add test for sentinel error chain preservation</name>
   <files>pkg/rds/commands_test.go</files>
   <action>
-Add test to verify sentinel error chain preservation:
+Check if commands_test.go exists and has mock infrastructure:
+```bash
+ls -la pkg/rds/*_test.go
+grep -l "Mock\|mock\|fake" pkg/rds/*_test.go
+```
 
+If commands_test.go exists with mock support, add test:
+```go
 func TestGetVolumeNotFoundReturnsSentinel(t *testing.T) {
-    // Setup mock that returns "not found"
-    // Verify errors.Is(err, utils.ErrVolumeNotFound) returns true
-    // Verify err.Error() still contains volume ID for context
+    // Create client with mock that returns empty output (simulates "not found")
+    // Call GetVolume with non-existent slot
+    _, err := client.GetVolume("pvc-nonexistent")
+
+    // Verify errors.Is works
+    if !errors.Is(err, utils.ErrVolumeNotFound) {
+        t.Errorf("Expected ErrVolumeNotFound sentinel, got: %v", err)
+    }
+
+    // Verify error message still contains context
+    if !strings.Contains(err.Error(), "pvc-nonexistent") {
+        t.Errorf("Expected error to contain volume ID, got: %v", err)
+    }
 }
+```
 
-If commands_test.go doesn't exist or doesn't have suitable infrastructure, add tests to existing test file or create minimal integration test.
+If mock infrastructure is missing:
+1. Skip test creation for now
+2. Create tech debt note in SUMMARY.md: "TODO: Add TestGetVolumeNotFoundReturnsSentinel once mock infrastructure exists"
+3. Verify manually: `go test ./pkg/rds/... -v` to ensure existing tests still pass
 
-The key verification is that errors.Is() works with the wrapped errors.
+The key verification is that errors.Is() works with the wrapped errors - this can be confirmed by:
+- Code inspection: WrapVolumeError uses fmt.Errorf("%w: ...", sentinel) pattern
+- Existing test coverage if available
   </action>
   <verify>
-go test ./pkg/rds/... -v -run TestGetVolume
-go test ./pkg/... -v -run Sentinel
+go test ./pkg/rds/... -v
+go test ./pkg/... -v -run Sentinel 2>/dev/null || echo "No sentinel tests yet"
   </verify>
   <done>
-Tests verify sentinel errors are returned and can be checked with errors.Is()
+Either: Tests verify sentinel errors work with errors.Is(), OR tech debt documented for future test addition
   </done>
 </task>
 
